Lower memory limit, handle OOM correctly, fix long errors

--- a/emscripten/index.html
+++ b/emscripten/index.html
@@ -47,7 +47,7 @@
 				<div
 					class="block p-2 text-xs bg-blue-darker flex flex-col md:flex-row">
 					<strong
-						class="flex-0 text-center md:text-left">Expression</strong>
+						class="flex-0 text-center md:text-left md:mr-2">Expression</strong>
 					<div class="md:flex-grow"></div>
 					<span
 						class="flex-0 text-center md:text-left mt-2 md:mt-0 hidden"
